[gd_scene load_steps=14 format=3 uid="uid://bd0oy4phn6nu1"]

[ext_resource type="Script" uid="uid://bg6jq3krvjgkr" path="res://src/entities/player.gd" id="1_4anbu"]
[ext_resource type="Texture2D" uid="uid://bw58vgx70t0hr" path="res://assets/images/cursor_simple.png" id="2_rxibo"]
[ext_resource type="AudioStream" uid="uid://dhk2vjqcgtiea" path="res://assets/Audio/keyboard_clicks.tres" id="3_244u8"]
[ext_resource type="AudioStream" uid="uid://6mdx87f52h06" path="res://assets/Audio/DepthsTheme_1_01.wav" id="3_u2j08"]
[ext_resource type="AudioStream" uid="uid://bi82igr2akq7n" path="res://assets/Audio/word approved.cm_01.wav" id="4_5f2sf"]
[ext_resource type="AudioStream" uid="uid://c4qwbbnyew1au" path="res://assets/Audio/318686__ramsamba__typewriter-carriage-return.wav" id="5_u2j08"]
[ext_resource type="AudioStream" uid="uid://dblrgd7vb1jf5" path="res://assets/Audio/204466__nhumphrey__typewriter-ding-01.wav" id="7_u2j08"]

[sub_resource type="RectangleShape2D" id="RectangleShape2D_mf2ua"]
size = Vector2(6, 18)

[sub_resource type="RectangleShape2D" id="RectangleShape2D_ms0oa"]
size = Vector2(6, 18)

[sub_resource type="Animation" id="Animation_5f2sf"]
length = 0.001
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("CursorWrapper:position")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 0,
"values": [Vector2(0, 0)]
}
tracks/1/type = "value"
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/path = NodePath("CursorWrapper:rotation")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 0,
"values": [0.0]
}

[sub_resource type="Animation" id="Animation_rxibo"]
resource_name = "die"
length = 0.75
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("CursorWrapper:position")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0, 0.05, 0.25, 0.5, 0.75),
"transitions": PackedFloat32Array(1, 1, 1, 1, 1),
"update": 0,
"values": [Vector2(0, 0), Vector2(1.3, -0.3), Vector2(6.5, 0.5), Vector2(13, 9), Vector2(16, 9)]
}
tracks/1/type = "value"
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/path = NodePath("CursorWrapper:rotation")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/keys = {
"times": PackedFloat32Array(0, 0.5),
"transitions": PackedFloat32Array(1, 1),
"update": 0,
"values": [0.0, 1.5708]
}

[sub_resource type="Animation" id="Animation_mf2ua"]
resource_name = "resurrect"
length = 0.3
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("CursorWrapper:position")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0, 0.3),
"transitions": PackedFloat32Array(1, 1),
"update": 0,
"values": [Vector2(16, 9), Vector2(0, 0)]
}
tracks/1/type = "value"
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/path = NodePath("CursorWrapper:rotation")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/keys = {
"times": PackedFloat32Array(0, 0.3),
"transitions": PackedFloat32Array(1, 1),
"update": 0,
"values": [1.5708, 0.0]
}

[sub_resource type="AnimationLibrary" id="AnimationLibrary_jiejy"]
_data = {
&"RESET": SubResource("Animation_5f2sf"),
&"die": SubResource("Animation_rxibo"),
&"resurrect": SubResource("Animation_mf2ua")
}

[node name="Player" type="Node2D"]
script = ExtResource("1_4anbu")

[node name="Area2D" type="Area2D" parent="."]
collision_mask = 14

[node name="CollisionShape2D" type="CollisionShape2D" parent="Area2D"]
unique_name_in_owner = true
shape = SubResource("RectangleShape2D_mf2ua")

[node name="ShapeCast2D" type="ShapeCast2D" parent="."]
unique_name_in_owner = true
enabled = false
shape = SubResource("RectangleShape2D_ms0oa")
target_position = Vector2(0, 0)
max_results = 16
collision_mask = 4
collide_with_areas = true
collide_with_bodies = false

[node name="CursorWrapper" type="Node2D" parent="."]
unique_name_in_owner = true

[node name="Cursor" type="Sprite2D" parent="CursorWrapper"]
unique_name_in_owner = true
scale = Vector2(0.3, 0.3)
texture = ExtResource("2_rxibo")
metadata/_edit_lock_ = true

[node name="CursorBlinkTimer" type="Timer" parent="."]
unique_name_in_owner = true

[node name="InvicibleFromDamageTimer" type="Timer" parent="."]
unique_name_in_owner = true
one_shot = true

[node name="CancelPendingTextTimer" type="Timer" parent="."]
unique_name_in_owner = true
one_shot = true

[node name="AnimationPlayer" type="AnimationPlayer" parent="."]
unique_name_in_owner = true
libraries = {
&"": SubResource("AnimationLibrary_jiejy")
}

[node name="Sounds" type="Node" parent="."]

[node name="Theme" type="AudioStreamPlayer" parent="Sounds"]
unique_name_in_owner = true
stream = ExtResource("3_u2j08")
volume_db = -14.886
autoplay = true
bus = &"Music"

[node name="KeyboardSound" type="AudioStreamPlayer" parent="Sounds"]
unique_name_in_owner = true
stream = ExtResource("3_244u8")
volume_db = -1.5

[node name="EnterSound" type="AudioStreamPlayer" parent="Sounds"]
unique_name_in_owner = true
stream = ExtResource("5_u2j08")
volume_db = -22.0

[node name="WordSound" type="AudioStreamPlayer" parent="Sounds"]
unique_name_in_owner = true
stream = ExtResource("4_5f2sf")
volume_db = -8.0
max_polyphony = 10
bus = &"SFX"

[node name="FailureSound" type="AudioStreamPlayer" parent="Sounds"]
unique_name_in_owner = true
stream = ExtResource("7_u2j08")
volume_db = -2.0
bus = &"SFX"

[node name="PlayerDamagedSound" type="AudioStreamPlayer" parent="Sounds"]
unique_name_in_owner = true
stream = ExtResource("3_244u8")
volume_db = -7.5

[node name="PlayerDiedSound" type="AudioStreamPlayer" parent="Sounds"]
unique_name_in_owner = true
stream = ExtResource("3_244u8")
volume_db = -7.5

[node name="PickupSound" type="AudioStreamPlayer" parent="Sounds"]
unique_name_in_owner = true
stream = ExtResource("3_244u8")
volume_db = -7.5

[node name="ShieldActivateSound" type="AudioStreamPlayer" parent="Sounds"]
unique_name_in_owner = true
stream = ExtResource("4_5f2sf")
volume_db = -8.0
max_polyphony = 10
bus = &"SFX"

[node name="ShieldDeactivateSonud" type="AudioStreamPlayer" parent="Sounds"]
unique_name_in_owner = true
stream = ExtResource("3_244u8")
volume_db = -7.5

[node name="TorpedoLaunchSound" type="AudioStreamPlayer" parent="Sounds"]
unique_name_in_owner = true
stream = ExtResource("4_5f2sf")
volume_db = -8.0
max_polyphony = 10
bus = &"SFX"

[node name="TorpedoExplodeSound" type="AudioStreamPlayer" parent="Sounds"]
unique_name_in_owner = true
stream = ExtResource("3_244u8")
volume_db = -7.5

[node name="SlowDownSound" type="AudioStreamPlayer" parent="Sounds"]
unique_name_in_owner = true
stream = ExtResource("3_244u8")
volume_db = -7.5

[node name="SpeedUpSound" type="AudioStreamPlayer" parent="Sounds"]
unique_name_in_owner = true
stream = ExtResource("3_244u8")
volume_db = -7.5

[node name="ShrinkSound" type="AudioStreamPlayer" parent="Sounds"]
unique_name_in_owner = true
stream = ExtResource("3_244u8")
volume_db = -7.5

[node name="ExpandSound" type="AudioStreamPlayer" parent="Sounds"]
unique_name_in_owner = true
stream = ExtResource("3_244u8")
volume_db = -7.5

[node name="BigExplosionSound" type="AudioStreamPlayer" parent="Sounds"]
unique_name_in_owner = true
stream = ExtResource("3_244u8")
volume_db = -7.5

[connection signal="area_entered" from="Area2D" to="." method="_on_area_2d_area_entered"]
[connection signal="area_exited" from="Area2D" to="." method="_on_area_2d_area_exited"]
